--- a/_columns/Stock_Of_the_Day/2023-09-12.md
+++ b/_columns/Stock_Of_the_Day/2023-09-12.md
@@ -101,5 +101,8 @@ GE stock has ascended 75.9% so far this year and is trading near its highest lev
 [S&P 500 Back Below 50-Day As Apple Unveils New iPhone](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp-500-falls-apple-iphone-15-unveiled-cpi-report-due/)
 
 
+[Futures Await Inflation Data; EU Probe Hits Tesla Rivals](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-cpi-inflation-report-due-eu-probe-hits-tesla-rivals/)
+
+
 
 
