--- a/_columns/The_Big_Picture/2023-09-12.md
+++ b/_columns/The_Big_Picture/2023-09-12.md
@@ -71,6 +71,19 @@ In the oil machinery and equipment group, **NOV** ([NOV](https://research.invest
 Uniform maker **Cintas** ([CTAS](https://research.investors.com/quote.aspx?symbol=CTAS)) gave an early buy signal Tuesday with a [trendline](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trend-lines-and-find-lower-buy-points-in-stock-charts/) breakout.
 
 
+
+
+---
+
+
+**[Futures Await Inflation Data; EU Probe Hits Tesla Rivals](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-cpi-inflation-report-due-eu-probe-hits-tesla-rivals/)**
+
+
+
+
+---
+
+
 Key Economic Data
 -----------------
 
