--- a/_columns/Stock_Of_the_Day/2020-10-16.md
+++ b/_columns/Stock_Of_the_Day/2020-10-16.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Axon Enterprise is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the innovative maker of Tasers, body cameras and cloud-based evidence systems sees high demand for its law-enforcement solutions. After clearing a buy point Thursday amid a price-target hike, Axon stock rose further into buy range on Friday.
+Axon Enterprise([AXON]) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the innovative maker of Tasers, body cameras and cloud-based evidence systems sees high demand for its law-enforcement solutions. After clearing a buy point Thursday amid a price-target hike, Axon stock rose further into buy range on Friday.
 
 
 
