--- a/_columns/Stock_Of_the_Day/2020-12-18.md
+++ b/_columns/Stock_Of_the_Day/2020-12-18.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Chegg is the [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the leading online education platform capitalizes on its Covid opportunity to accelerate growth. Part of the premier [IBD 50](https://research.investors.com/stock-lists/ibd-50/) stock list, Chegg stock climbed near a buy point on Friday as it gained ground for a seventh straight session.
+Chegg([CHGG]) is the [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the leading online education platform capitalizes on its Covid opportunity to accelerate growth. Part of the premier [IBD 50](https://research.investors.com/stock-lists/ibd-50/) stock list, Chegg stock climbed near a buy point on Friday as it gained ground for a seventh straight session.
 
 
 
