--- a/_columns/Stock_Of_the_Day/2021-05-10.md
+++ b/_columns/Stock_Of_the_Day/2021-05-10.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Veritiv is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the company capitalizes on the Covid packaging boom to reposition its business and improve its credit profile. VRTV stock neared a buy point last week as it posted record Q1 earnings and raised guidance.
+Veritiv([VRTV]) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the company capitalizes on the Covid packaging boom to reposition its business and improve its credit profile. VRTV stock neared a buy point last week as it posted record Q1 earnings and raised guidance.
 
 
 
