--- a/_columns/Stock_Of_the_Day/2022-11-25.md
+++ b/_columns/Stock_Of_the_Day/2022-11-25.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Avis Budget Group is Friday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the car rental giant looks to sustain higher profit margins even as the outlook for the economy and travel becomes more clouded. CAR stock rose closer to buy points from either a four-weeks-tight pattern or from a long, deep base.
+Avis Budget Group([CAR]) is Friday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the car rental giant looks to sustain higher profit margins even as the outlook for the economy and travel becomes more clouded. CAR stock rose closer to buy points from either a four-weeks-tight pattern or from a long, deep base.
 
 
 
