--- a/_columns/Stock_Of_the_Day/2020-05-08.md
+++ b/_columns/Stock_Of_the_Day/2020-05-08.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Axon Enterprise is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) after the maker of Tasers, law-enforcement body cameras and cloud-based evidence storage blew past first-quarter earnings estimates late Thursday. Although the company withdrew 2020 guidance amid a coronavirus hit to government budgets, Axon stock broke out above a [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a [cup-with-handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) base.
+Axon Enterprise([AXON]) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) after the maker of Tasers, law-enforcement body cameras and cloud-based evidence storage blew past first-quarter earnings estimates late Thursday. Although the company withdrew 2020 guidance amid a coronavirus hit to government budgets, Axon stock broke out above a [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) from a [cup-with-handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) base.
 
 
 
