--- a/_columns/Stock_Of_the_Day/2020-12-23.md
+++ b/_columns/Stock_Of_the_Day/2020-12-23.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Axon Enterprise is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the maker of Tasers, body cameras and cloud-based evidence systems keeps solving law-enforcement challenges and growing its market opportunity. AAXN stock rose into a buy zone in Wednesday's [stock-market action](https://www.investors.com/market-trend/stock-market-today/stock-market-today-market-trends-best-stocks-buy-watch/).
+Axon Enterprise([AXON]) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the maker of Tasers, body cameras and cloud-based evidence systems keeps solving law-enforcement challenges and growing its market opportunity. AAXN stock rose into a buy zone in Wednesday's [stock-market action](https://www.investors.com/market-trend/stock-market-today/stock-market-today-market-trends-best-stocks-buy-watch/).
 
 
 
