--- a/_columns/Stock_Of_the_Day/2022-03-29.md
+++ b/_columns/Stock_Of_the_Day/2022-03-29.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-Dutch Bros is Tuesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the drive-thru coffee shop stays on track for fast growth, despite labor and inflation headwinds. BROS stock heated up in Tuesday's [stock market action](https://www.investors.com/market-trend/stock-market-today/stock-market-today-market-trends-best-stocks-buy-watch/), surging past an early entry and then an official buy point.
+Dutch Bros([BROS]) is Tuesday's [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) as the drive-thru coffee shop stays on track for fast growth, despite labor and inflation headwinds. BROS stock heated up in Tuesday's [stock market action](https://www.investors.com/market-trend/stock-market-today/stock-market-today-market-trends-best-stocks-buy-watch/), surging past an early entry and then an official buy point.
 
 
 
