--- a/_columns/Stock_Of_the_Day/2023-08-01.md
+++ b/_columns/Stock_Of_the_Day/2023-08-01.md
@@ -12,7 +12,7 @@ author: REINHARDT KRAUSE
 
 
 
-Oracle is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the large-cap software stock finds support at its 21-day exponential moving average. Oracle stock now is actionable after getting a bounce from its 10-week moving average.
+Oracle([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) is the [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the large-cap software stock finds support at its 21-day exponential moving average. Oracle stock now is actionable after getting a bounce from its 10-week moving average.
 
 
 
