--- a/_columns/The_Big_Picture/2023-09-14.md
+++ b/_columns/The_Big_Picture/2023-09-14.md
@@ -127,7 +127,7 @@ Shopify shares are adding a handle to a cup base, taking the buy point to 67.60.
 [5 Best Dow Jones Stocks To Buy And Watch](https://www.investors.com/research/dow-jones-stocks/)
 
 
-[Futures: Market Rally Makes Bullish Move, Now What? Adobe Earnings Top](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-makes-bullish-move-adobe-earnings-top/)
+[Futures Mixed As Yields Keep Rising; UAW Strike Underway](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-treasury-yields-near-key-levels-uaw-strike-underway/)
 
 
 
