--- a/_columns/The_Big_Picture/2023-09-28.md
+++ b/_columns/The_Big_Picture/2023-09-28.md
@@ -165,7 +165,7 @@ Cybersecurity leader Okta is building a [cup with handle](https://www.investors.
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
-[Rally Attempt Gains Steam; Meta Leads 9 Stocks To Watch](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rally-attempt-gains-steam-with-inflation-data-due-meta-leads-9-stocks-to-watch/)
+[Futures Rise With Inflation Data Due; Time To Start Buying?](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-with-inflation-data-due-time-to-start-buying-tesla-meta-in-focus/)
 
 
 
