--- a/_columns/The_Big_Picture/2023-10-05.md
+++ b/_columns/The_Big_Picture/2023-10-05.md
@@ -127,7 +127,7 @@ McKesson is breaking out past a flat base's 441 buy point and is in buy range. M
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
-[Dow Erases Losses With Jobs Data Due; 7 Stocks Boasting This Bullish Trait](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stocks-slash-sharp-losses-with-jobs-report-due-nvidia-meta-at-key-levels/)
+[Futures: Jobs Report On Tap; Tesla, Exxon Fall On News](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-with-jobs-report-on-tap-tesla-cuts-prices-exxon-near-huge-shale-deal/)
 
 
 
