--- a/_columns/The_Big_Picture/2023-10-12.md
+++ b/_columns/The_Big_Picture/2023-10-12.md
@@ -124,7 +124,7 @@ Finally, [Uber Technologies](https://www.investors.com/research/ibd-stock-of-the
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
-[Stocks Skid On Ugly Treasury Auction; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stocks-fall-on-ugly-treasury-auction-jpmorgan-unitedhealth-on-tap/)
+[Futures Mixed; Oil Prices Spike, Yields Tumble](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-oil-prices-spike-on-us-sanctions-jpmorgan-unitedhealth-earnings-beat/)
 
 
 
