--- a/_columns/The_Big_Picture/2023-10-18.md
+++ b/_columns/The_Big_Picture/2023-10-18.md
@@ -117,7 +117,7 @@ IBD's airline industry group fell 3.8% on the stock market, extending a ghastly 
 [Looking For The Next Big Stock Market Winners? Start With These 3 Steps](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-start-with-stock-market-investing-routine-routine/)
 
 
-[Futures: Tesla EPS Plunges, Musk Tempers Cybertruck Expectations](https://www.investors.com/market-trend/stock-market-today/dow-jones-tumbles-tesla-earnings-dive-but-cybertruck-deliveries-loom-netflix-jumps-late/)
+[Futures: Yields Eye 5%; Tesla Falls On These Elon Musk Warnings](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-as-treasury-yields-eye-5-tesla-tumbles-on-these-elon-musk-warnings/)
 
 
 
