--- a/_columns/The_Big_Picture/2023-10-20.md
+++ b/_columns/The_Big_Picture/2023-10-20.md
@@ -54,7 +54,7 @@ As if that wasn't enough, there is a packed slate of Big Tech earnings due. Heav
 ---
 
 
-**[Point Break For Stock Market? These 4 Titans Lead Huge Earnings Wave](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-point-break-for-stock-market-microsoft-meta-lead-earnings-wave/)**
+**[Futures Fall As Yields Top 5%; Titans Lead Earnings Wave](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-10-year-treasury-yield-tops-5-microsoft-meta-lead-earnings-wave/)**
 
 
 
