--- a/_columns/Stock_Of_the_Day/2023-10-31.md
+++ b/_columns/Stock_Of_the_Day/2023-10-31.md
@@ -82,7 +82,7 @@ Cameco stock has a 74 [Composite Rating](https://www.investors.com/how-to-invest
 [Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[Market Rallies As Tesla Autopilot Scores Big Win; Fed Decision Looms](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rallies-tesla-autopilot-scores-big-win-fed-looms-amd-falls/)
+[Futures Fall As AMD Slides; All Eyes On Fed Decision, Powell](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-amd-slides-all-eyes-on-fed-decision-powell/)
 
 
 
