--- a/_columns/The_Big_Picture/2023-11-02.md
+++ b/_columns/The_Big_Picture/2023-11-02.md
@@ -63,7 +63,7 @@ Stock Market Today
 On Thursday, indexes closed near their session highs, finishing sharply in the green.
 
 
-The Dow Jones Industrial Average rallied 1.7%, while the S&P 500 gained 1.9%. The S&P had its best day since April 27, making its four-day streak the strongest since November 2022, according to Dow Jones Market Data.
+The Dow Jones Industrial Average rallied 1.7%, while the S&P 500 gained 1.9%. The S&P had its best day since April 27, making its four-day streak the strongest since November 2022, according to Dow Jones Market Data. Its strong gain in higher volume marks a follow-through for the index, although the Nasdaq's follow-through Wednesday changed IBD's market outlook to "confirmed uptrend."
 
 
 The tech-heavy Nasdaq composite advanced 1.8%. Its 5.6%, five-day advance is the best since late January and early February. And the small-cap Russell 2000 led the way with a 2.7% jump.
@@ -155,7 +155,7 @@ And Uber Technologies raced more than 6% higher Thursday, recapturing the 50-day
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
- [Market Roars With Jobs Data Due; Apple Leads Earnings Wave](https://www.investors.com/market-trend/stock-market-today/dow-jones-jumps-in-broad-market-rally-palantir-spikes-apple-falls-late-jobs-report-looms/)
+[Tech Futures Fall On Apple Warning; Jobs Report Looms](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-apple-falls-on-holiday-outlook-jobs-report-due/)
 
 
 
