--- a/_columns/Stock_Of_the_Day/2023-11-03.md
+++ b/_columns/Stock_Of_the_Day/2023-11-03.md
@@ -113,7 +113,7 @@ This year, mutual funds have been piling into DraftKings stock amid stock market
 [Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/how-to-arch-growth-stocks/)
 
 
-[What To Do Now After Huge Market Week](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-after-big-market-rally-warren-buffett-berkshire-nvidia-in-focus/)
+[After Market's Best Week Of 2023, How Aggressive Should You Be?](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-after-market-best-week-of-2023-how-aggressive-should-you-be/)
 
 
 
