--- a/_columns/The_Big_Picture/2023-11-03.md
+++ b/_columns/The_Big_Picture/2023-11-03.md
@@ -57,7 +57,7 @@ There also will be opportunities for Fed Chair Jerome Powell to further fine-tun
 ---
 
 
-**[What To Do Now After Huge Market Week](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-after-big-market-rally-warren-buffett-berkshire-nvidia-in-focus/)**
+**[After Market's Best Week Of 2023, How Aggressive Should You Be?](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-after-market-best-week-of-2023-how-aggressive-should-you-be/)**
 
 
 
