--- a/_columns/The_Big_Picture/2023-11-06.md
+++ b/_columns/The_Big_Picture/2023-11-06.md
@@ -47,13 +47,13 @@ The Nasdaq composite, meanwhile, staged its [follow-through day](https://www.inv
 The Dow Jones Industrial Average, a 5.1% gainer last week, inched ahead 0.1%.
 
 
-Meanwhile, TD Ameritrade announced Monday that its Investor Movement Index (IMX) registered at 5.64 in October, flat with September and below a 52-week high of 5.70 in August.
+Meanwhile, TD Ameritrade announced Monday that its Investor Movement Index, or IMX registered at 5.64 in October, flat with September and below a 52-week high of 5.70 in August. The IMX gets calculated by pulling a sample from its client base of funded accounts, including all accounts that completed a trade in the past month.
 
 
 Joe Mazzola, director of trading and education at Charles Schwab, said in a news release that while the October reading "ranks on the low end historically, it's up significantly from this time last year at 4.25."
 
 
-TD Ameritrade added that "clients were able to find opportunities in individual names and remained net buyers of equities particularly in the financial, industrial and consumer discretionary sectors." The IMX gets calculated by pulling a sample from its client base of funded accounts, including all accounts that completed a trade in the past month.
+TD Ameritrade added that "clients were able to find opportunities in individual names and remained net buyers of equities particularly in the financial, industrial and consumer discretionary sectors."
 
 
 
@@ -124,14 +124,14 @@ Racing To New Highs
 -------------------
 
 
-Ferrari's rally in 2023 served as one notable topic of discussion during [Friday's "IBD Live" show](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A) as it has thrived since getting spun off from Fiat Chrysler, which is now known as **Stellantis** ([STLA](https://research.investors.com/quote.aspx?symbol=STLA)). Ferrari cruised past a [trendline buy point](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/) near 315 last week as it put on the finishing touches on a [3-1/2 month flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/).
+Ferrari's rally in 2023 served as one notable topic of discussion during [Friday's "IBD Live" show](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A) as it has thrived since it was spun off from Fiat Chrysler, now known as **Stellantis** ([STLA](https://research.investors.com/quote.aspx?symbol=STLA)). Ferrari cruised past a [trendline buy point](https://www.investors.com/how-to-invest/investors-corner/looking-for-an-earlier-entry-in-a-stock-learn-how-to-do-this/) near 315 last week as it put the finishing touches on a [3-1/2 month flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/).
 
 
 
-Notice on a weekly chart how the stock's character changed last week as RACE zoomed 11% higher for the week. Weekly volume surged to the highest amount since the week ended Feb. 3.
+Notice on a weekly chart how the stock's character changed last week as RACE zoomed 11% higher last week. Weekly volume surged to the highest amount since the week ended Feb. 3.
 
 
-Fundamentals at the Italian sports car maker have accelerated. You often tend to see this in leading stock market winners, particularly near the start of their awesome price runs.
+Fundamentals at the Italian sports car maker have accelerated. This is often seen in leading stock market winners, particularly near the start of their awesome price runs.
 
 
 Ferrari's earnings per share dipped 2% to $1.30 in the fourth quarter of 2022, then rose 23%, 40% and 60% vs. year-ago levels in the next three quarters through Q3 of this year. Revenue climbed 10%, 18%, 19% and 33% over the same time frame.
