--- a/_columns/Stock_Of_the_Day/2023-11-09.md
+++ b/_columns/Stock_Of_the_Day/2023-11-09.md
@@ -76,7 +76,7 @@ Be sure to read IBD's [The Big Picture](https://www.investors.com/category/mark
 [How To Make Money In Stocks In 3 Simple Steps](https://www.investors.com/videos/how-to-make-money-in-stocks-in-3-simple-steps/)
 
 
-[Stocks Retreat On Yields, Powell; Tesla Tumbles](https://www.investors.com/news/dow-jones-futures-sp-500-win-streak-ends-on-treasury-auction-fed-powell-comments-tesla-dives/)
+[Futures: What To Do As Market Pulls Back; Nvidia, Tesla At Key Levels](https://www.investors.com/news/dow-jones-futures-what-to-do-as-market-pulls-back-nvidia-tesla-stock-key-levles/)
 
 
 
