--- a/_columns/The_Big_Picture/2023-11-09.md
+++ b/_columns/The_Big_Picture/2023-11-09.md
@@ -133,7 +133,7 @@ ServiceNow is in buy range past a 607.90 entry in a double bottom. The 5% buy zo
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
-[Stocks Retreat On Treasury Auction, Powell Comments; Tesla Tumbles](https://www.investors.com/news/dow-jones-futures-sp-500-win-streak-ends-on-treasury-auction-fed-powell-comments-tesla-dives/)
+[Futures: What To Do As Market Pulls Back; Nvidia, Tesla At Key Levels](https://www.investors.com/news/dow-jones-futures-what-to-do-as-market-pulls-back-nvidia-tesla-stock-key-levles/)
 
 
 
