--- a/_columns/The_Big_Picture/2023-11-17.md
+++ b/_columns/The_Big_Picture/2023-11-17.md
@@ -83,7 +83,7 @@ IShares U.S. Home Construction ETF ([ITB](https://research.investors.com/quote.a
 [Want More IBD Insights? Subscribe To Our Investing Podcast](https://www.investors.com/how-to-invest/investing-podcast-how-to-make-more-money-stock-market-top-stocks-stock-charts/)
 
 
-[Power Trend Looms; Nvidia Earnings Key For These AI Stocks](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-power-trend-looms-nvidia-key-for-these-5-ai-stocks/)
+[Futures: 6 AI Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-openai-key-for-these-5-ai-stocks/)
 
 
 
