--- a/_columns/The_Big_Picture/2023-11-30.md
+++ b/_columns/The_Big_Picture/2023-11-30.md
@@ -168,7 +168,7 @@ In early November, D.R. Horton reported better-than-expected fiscal fourth-quart
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
- [Dow Hits 2023 High; Tesla Stock Skids On Cybertruck Details](https://www.investors.com/market-trend/stock-market-today/dow-jones-hits-2023-high-as-salesforce-soars-tesla-falls-on-cybertruck-prices-range/)
+[Futures: Tesla Skids On Cybertruck Details](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-tesla-falls-on-cybertruck-details/)
 
 
 
