--- a/_columns/The_Big_Picture/2023-12-06.md
+++ b/_columns/The_Big_Picture/2023-12-06.md
@@ -124,6 +124,19 @@ The Nasdaq, which currently has two mild distribution days on its own count, cle
 When both major indexes and leading stocks trade neatly above their respective [21-day exponential moving averages](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/), they give individual investors a bullish signal to look for good entries in high-quality growth stocks. Big-volume moves past the correct buy point in [well-built bases](https://www.investors.com/how-to-invest/investors-corner/best-stocks-to-buy-form-bullish-bases-before-big-price-gains/), pullbacks to the top of bases, and [trendline entries](https://www.investors.com/how-to-invest/investors-corner/how-to-draw-trendlines-and-find-lower-buy-points-in-stock-charts/) all give a higher probability of making money immediately.
 
 
+
+
+---
+
+
+**[Futures Mixed; AMD, Google Pop In Day 2 Reaction To AI News](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-techs-rise-as-amd-google-bounce-in-day-2-reaction-to-ai-news/)**
+
+
+
+
+---
+
+
 Sell Rules Triggered In A Few Stocks Today
 ------------------------------------------
 
