--- a/_columns/Stock_Of_the_Day/2023-10-20.md
+++ b/_columns/Stock_Of_the_Day/2023-10-20.md
@@ -12,7 +12,7 @@ author: JED GRAHAM
 
 
 
-HealthEquity is Friday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the leading provider of health savings accounts sees customers' account balances grow faster amid the Federal Reserve's higher-for-longer interest-rate regime. HQY stock is pulling back on Friday after closing at an 11-month high, poised just below a buy point.
+HealthEquity([HQY](https://research.investors.com/quote.aspx?symbol=HQY)) is Friday's [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the leading provider of health savings accounts sees customers' account balances grow faster amid the Federal Reserve's higher-for-longer interest-rate regime. HQY stock is pulling back on Friday after closing at an 11-month high, poised just below a buy point.
 
 
 
