--- a/_columns/The_Big_Picture/2023-12-07.md
+++ b/_columns/The_Big_Picture/2023-12-07.md
@@ -146,7 +146,7 @@ JP Morgan analyst Doug Anmuth said in a research note that the Gemini release We
 [How To Research Growth Stocks: Why This IBD Tool Simplifies The Search For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/stocks-to-buy-and-watch-ibd-composite-rating-top-growth-stocks/)
 
 
-[Futures: Four Giants Enter Buy Zones In Broad Rally](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-four-tech-giants-lead-market-move-into-buy-zones-jobs-report-due/)
+[Futures: Jobs Data Due; Tesla China Sales Bounce](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-jobs-report-due-with-stocks-near-2023-highs-tesla-china-sales-bounce/)
 
 
 
