--- a/_columns/The_Big_Picture/2023-12-12.md
+++ b/_columns/The_Big_Picture/2023-12-12.md
@@ -92,7 +92,7 @@ In index funds, ProShares S&P 500 Dividend Aristocrats ETF ([NOBL](https://rese
 [Want More IBD Insights? Subscribe To Our Investing Podcast](https://www.investors.com/how-to-invest/investing-podcast-how-to-make-more-money-stock-market-top-stocks-stock-charts/)
 
 
-[Nasdaq Hits 2023 Highs, Nvidia Reclaims Buy Point; Fed Decision Looms](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-hits-2023-highs-nvidia-reclaims-buy-point-with-fed-on-tap/)
+[Fed Shift Seen; Nvidia Leads 6 Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fed-rate-shift-seen-tesla-model-3-variants-to-lose-7500-tax-credit/)
 
 
 
