--- a/_columns/The_Big_Picture/2023-12-29.md
+++ b/_columns/The_Big_Picture/2023-12-29.md
@@ -35,7 +35,7 @@ Small caps gave up some of the stout recent gains, with the Russell 2000 ending 
 ---
 
 
-[**Gear Up For 2024; Five Big Winners Setting Up Again**](https://www.investors.com/market-trend/stock-market-today/stock-market-2024-nvidia-sets-up-after-monster-run-tesla-deliveries-due/)
+**[Market Rally Strong As 2024 Kicks Off; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-2024-tesla-deliveries-due/)**
 
 
 
