--- a/_columns/The_Big_Picture/2024-01-03.md
+++ b/_columns/The_Big_Picture/2024-01-03.md
@@ -146,7 +146,7 @@ The yield on the benchmark U.S. Treasury 10-year bond tested the 4% level before
 The key jobs report arrives on Friday. The [Econoday consensus forecast](https://research.investors.com/economic-calendar/) calls for nonfarm payrolls to rise on net by 158,000 jobs in December. That's down from a 199,000-job gain in November. Economists see the jobless rate ticking up to 3.8% from 3.7%. They see average hourly worker earnings up 3.9% year over year, a slight deceleration from 4% growth in the prior month.
 
 
-Charley Ripley, senior investment strategist at Allianz Investment Management in Minneapolis, argued that the Fed meeting's minutes "were another attempt by the Fed to walk back some of the overly-dovish interpretation of the December FOMC meeting. The Fed really "let the cat out of the bag" at the last meeting when officials' median forecast for policy rates showed 75 basis points of rate cuts in 2024."
+Charley Ripley, senior investment strategist at Allianz Investment Management in Minneapolis, argued that the Fed meeting's minutes "were another attempt by the Fed to walk back some of the overly-dovish interpretation of the December FOMC meeting. The Fed really 'let the cat out of the bag' at the last meeting when officials' median forecast for policy rates showed 75 basis points of rate cuts in 2024."
 
 
 The December release by the Fed of its summary of economic projections indicated that the U.S. central bank felt comfortable with the possibility of taking the fed funds rate down by a total three quarters of a percentage point in 2024 to a range of 4.5%-4.75%. However, CME FedWatch's survey of bond traders has shown expectations of a larger cut in the cost of money.
