--- a/_columns/The_Big_Picture/2024-01-05.md
+++ b/_columns/The_Big_Picture/2024-01-05.md
@@ -64,7 +64,7 @@ Traders also will be keeping a close eye on a [slew of big bank earnings](https:
 ---
 
 
-**[What To Do With Market At Key Levels](https://www.investors.com/market-trend/stock-market-today/market-rally-at-key-levels-bitcoin-etf-nvidia-near-buy-point-on-100-billion-forecast/)**
+**[Market At Key Level; Nvidia Leads 6 Stocks To Watch](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-at-key-levels-nvidia-leads-6-stocks-near-buy-points/)**
 
 
 
