--- a/_columns/The_Big_Picture/2024-01-05.md
+++ b/_columns/The_Big_Picture/2024-01-05.md
@@ -64,7 +64,7 @@ Traders also will be keeping a close eye on a [slew of big bank earnings](https:
 ---
 
 
-**[Market At Key Level; Nvidia Leads 6 Stocks To Watch](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-at-key-levels-nvidia-leads-6-stocks-near-buy-points/)**
+**[Futures Fall As Boeing Tumbles On FAA Grounding](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-boeing-plunges-on-737-max-woes-can-market-rally-hold-key-levels/)**
 
 
 
