--- a/_columns/The_Big_Picture/2024-01-10.md
+++ b/_columns/The_Big_Picture/2024-01-10.md
@@ -110,8 +110,8 @@ Maltbie also manages the Argonaut 2000 Fund, which in December ranked among the 
 ---
 
 
-Even Small Caps Need A Focus On The Top Line
---------------------------------------------
+Even Small Caps Need Focus On The Top Line
+------------------------------------------
 
 
 Maltbie notes that with as much as an estimated $6 trillion sitting on the sidelines in mainly money market funds, a return of even just a portion of that money could have dramatic effects on quality small-cap issues — in general, those stocks with market values of under $2 billion.
@@ -120,7 +120,7 @@ Maltbie notes that with as much as an estimated $6 trillion sitting on the sidel
 "Valuations in the overall market are pretty fair, and interest rates are coming down faster than most people think," Maltbie added.
 
 
-Coverage among micro-cap stocks is notoriously thin. This means it can be difficult to even value a company based on earnings as no published estimates exist. So, Singular Research focuses on companies with substantial sales and compares candidates with their respective industries in terms of price-to-sales ratios.
+Analyst coverage among micro-cap stocks is notoriously thin. This means it can be difficult to even value a company based on earnings as no published estimates exist. So, Singular Research focuses on companies with substantial sales and compares candidates with their respective industries in terms of price-to-sales ratios.
 
 
 Stock Market Internals
