--- a/_columns/The_Big_Picture/2024-01-11.md
+++ b/_columns/The_Big_Picture/2024-01-11.md
@@ -159,7 +159,7 @@ Dow Jones software giant Microsoft is breaking out past a flat base's 384.30 buy
 [Nvidia, Tesla, Meta Reveal Rules For Santa Claus Rally And Beyond](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
-[Futures: Big Earnings Loom After Market, Leading Stocks Battle Back](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-resilient-even-as-bitcoin-stocks-tesla-skid-huge-earnings-due/)
+[Futures Fall Amid Big Earnings; Tesla Cuts Prices](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-amid-big-earnings-crude-oil-tesla-cuts-prices/)
 
 
 
