--- a/_columns/The_Big_Picture/2024-01-12.md
+++ b/_columns/The_Big_Picture/2024-01-12.md
@@ -51,7 +51,7 @@ More banks are getting set to post results as the earnings season heats up. **Go
 ---
 
 
-**[Market Making All The Right Moves; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-making-the-right-moves-nvidia-microsoft-lead-tesla-breaks-down/)**
+**[Futures: Market Rally Stellar; Four Stocks In Buy Zones](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stellar-market-rally/)**
 
 
 
