--- a/_columns/The_Big_Picture/2024-01-16.md
+++ b/_columns/The_Big_Picture/2024-01-16.md
@@ -90,9 +90,6 @@ Among the most active shipping stocks Tuesday, **Star Bulk Carriers** ([SBLK](ht
 [View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/01/DailyGMI_011624.pdf)
 
 
- 
-
-
 **YOU MAY ALSO LIKE:**
 
 
@@ -108,7 +105,7 @@ Among the most active shipping stocks Tuesday, **Star Bulk Carriers** ([SBLK](ht
 [MarketSmith's Tools Can Help The Individual Investor](https://marketsmith.investors.com/?src=A012BF)
 
 
-[Market Pulls Back, But These 5 Stocks Flash Buy Signals](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-rally-pulls-back-but-amd-these-stocks-stand-out/)
+[Futures Fall Amid China Data; Tesla Cuts Prices Again](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fall-on-china-economic-data-tesla-cuts-prices-again/)
 
 
 
