--- a/_columns/Stock_Of_the_Day/2024-01-18.md
+++ b/_columns/Stock_Of_the_Day/2024-01-18.md
@@ -74,7 +74,7 @@ DraftKings stock vaulted 209% in 2023.
 [Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Market Shrugs Off Fed Warning As These Two Tech Titans Jump](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-shrugs-off-fed-warning-taiwan-semiconductor-apple-jump-tesla-stock/)
+[Futures Rise; This AI Play Surges](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-after-market-shrugs-off-fed-warning/)
 
 
 
