--- a/_columns/The_Big_Picture/2024-01-18.md
+++ b/_columns/The_Big_Picture/2024-01-18.md
@@ -172,7 +172,7 @@ Spotify was added to [IBD Leaderboard](https://www.investors.com/product/leaderb
 [Nvidia, Tesla, Meta Reveal Rules For Santa Claus Rally And Beyond](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
-[Market Shrugs Off Fed Warning; This AI Play Surges Late](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-shrugs-off-fed-warning-taiwan-semiconductor-apple-jump-tesla-stock/)
+[Futures Rise; This AI Play Surges](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-after-market-shrugs-off-fed-warning/)
 
 
 
