--- a/_columns/The_Big_Picture/2024-01-19.md
+++ b/_columns/The_Big_Picture/2024-01-19.md
@@ -51,7 +51,7 @@ Meanwhile, earnings season is beginning to intensify. **Netflix** ([NFLX](https:
 ---
 
 
-**[Market Hits Record Highs As Leaders Run; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-sp-500-hit-record-highs-leading-stocks-run-tesla-netflix-earnings-due/)**
+**[Futures: Three Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-sp-500-record-highs-tesla-netflix-earnings-due/)**
 
 
 
