--- a/_columns/The_Big_Picture/2024-01-23.md
+++ b/_columns/The_Big_Picture/2024-01-23.md
@@ -121,7 +121,7 @@ Among online travel firms, **Expedia** ([EXPE](https://research.investors.com/qu
 [IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Market Holds Gains, Netflix Jumps Late; These Earnings Due](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-market-holds-gains-netflix-jumps-tesla-servicenow-earnings-due/)
+[Futures Rise As Netflix Jumps Late; Here Comes Tesla](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-netflix-jumps-here-comes-tesla/)
 
 
 
