--- a/_columns/Stock_Of_the_Day/2024-01-31.md
+++ b/_columns/Stock_Of_the_Day/2024-01-31.md
@@ -102,7 +102,7 @@ Lennar stock has a 95 [Composite Rating](https://www.investors.com/how-to-invest
 [Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
-[Stocks Tumble As Powell Says March Rate Cut Unlikely](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stocks-tumble-as-fed-chief-powell-says-march-rate-cut-unlikely/)
+[Futures Rise After Powell Sell-Off; This Solar Play Surges](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-stocks-tumble-after-fed-powell-fuels-market-sell-off-solar-play-nextracker-surges/)
 
 
 
