--- a/_columns/The_Big_Picture/2024-02-07.md
+++ b/_columns/The_Big_Picture/2024-02-07.md
@@ -67,10 +67,10 @@ Booking has been a superlative long-term winner.
 
 
 
-After the Great Financial Crisis of 2008-2009 ended, Booking joined the winners' circle. In July of 2009, BKNG shares cleared a [five-week flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/) with a [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 119.14 at the time and cruised to multiyear highs. That base was part of a deep first-stage consolidation. Booking doubled by the spring of 2010, formed another deep base, then broke out again.
+After the financial crisis of 2008-2009 ended, Booking joined the winners' circle. In July of 2009, BKNG shares cleared a [five-week flat base](https://www.investors.com/how-to-invest/investors-corner/what-is-a-flat-base-skechers-stock-skx/) with a [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) of 119.14 at the time and cruised to multiyear highs. That base was part of a deep first-stage consolidation. Booking doubled by the spring of 2010, formed another deep base, then broke out again.
 
 
-Now trading at 3,708, Booking has booked a 30-fold gain, roughly equal to a CAGR (compounded annual growth rate) of nearly 26%.
+Now trading at 3,708, Booking has booked a 30-fold gain, roughly equal to a compounded annual growth rate (CAGR) of nearly 26%.
 
 
 Another nontech leader within the top 30 names has been **Costco Wholesale** ([COST](https://research.investors.com/quote.aspx?symbol=COST)). Shares have recently surpassed the [20%-25% profit zone](https://www.investors.com/how-to-invest/investors-corner/how-to-build-long-term-profits-in-stocks-take-many-gains-at-20-25/) after a breakout near 570.
