--- a/_columns/The_Big_Picture/2024-02-08.md
+++ b/_columns/The_Big_Picture/2024-02-08.md
@@ -63,6 +63,19 @@ The British chip designer was boosted not just by good earnings and guidance, bu
 In contrast, fiber-optic plays, toolmakers, wholesale drug suppliers and auto parts retailers all struggled. Tobacco stocks also coughed up painful declines.
 
 
+
+
+---
+
+
+**[Futures Rise With Key Data Due; Bitcoin Above $47,000](https://www.investors.com/market-trend/stock-market-today/dow-futures-cpi-data-on-tap-bitcoin-hits-high/)**
+
+
+
+
+---
+
+
 Stock Market Today: Multiple Stocks Clear Entries
 -------------------------------------------------
 
